# Campus-Shield-QQ-

./: .gitignore  .renderignore  ARCHITECTURE_DIAGRAMS.md  CODE_SNIPPETS.md  CSV_LOADING_FIX.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FIX_IMPORT_ISSUES.md  HACKATHON_DEMO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LLM_DOCUMENTATION_INDEX.md  LLM_MODULE_README.md  LLM_RAG_RESTORATION_SUMMARY.md  LLM_STARTUP_GUIDE.md  PRODUCTION_HARDENING_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART_LLM.md  QUICK_FIX.py  README.md  REFACTOR_COMPLETE.md  START_LLM_ASSISTANT.md  app.py  debug_routes.py  final_report.py  init_db.py  load_incidents_from_csv.py  package-lock.json  railway.json  render.yaml  requirements.txt  setup_venv.bat  setup_venv.ps1  start_server.bat  start_server.ps1  test_api.py  test_db.py  test_imports.py  test_integration.py  test_llm_rag_restoration.py  test_model.py  (+6 more)
Backend/: .dockerignore  ARCHITECTURE_V2.md  Dockerfile  INSTALLATION_NOTES.md  (+8 more)
CampusShield-AI/CampusShield-AI/: README.md  package.json  pyproject.toml
CampusShield-AI/CampusShield-AI/configs/: default.yaml
CampusShield-AI/CampusShield-AI/infra/k8s/: deployment.yaml
CampusShield-AI/CampusShield-AI/scripts/: deploy.sh
CampusShield-AI/CampusShield-AI/src/ai/orchestration/: predictor.py
CampusShield-AI/CampusShield-AI/src/ai/vision/: detector.py
CampusShield-AI/CampusShield-AI/src/backend/: server.ts
CampusShield-AI/CampusShield-AI/src/data/ingestion/: pipeline.py
CampusShield-AI/CampusShield-AI/src/data/storage/: store.py
CampusShield-AI/CampusShield-AI/src/edge/iot_gateway/: gateway.py
(+141 files in other folders)
