[tool]
name = "CampusShield AI"
version = "0.1.0"
description = "A Smart Campus Safety & Emergency Response System"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
numpy = "^1.21.0"
opencv-python = "^4.5.3.20210927"
tensorflow = "^2.6.0"
scikit-learn = "^0.24.2"
requests = "^2.26.0"

[dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"